@@ -6,24 +6,88 @@
 :Contact: goodger@users.sourceforge.net
 :Date: $Date$
 :Web site: http://docutils.sourceforge.net/
+:Copyright: This document has been placed in the public domain.
 
-Most of the files included in this project are in the public domain,
-and therefore have no license requirement and no restrictions on
-copying or usage.  The exceptions are:
+Most of the files included in this project have been placed in the
+public domain, and therefore have no license requirements and no
+restrictions on copying or usage; see the `Public Domain Dedication`_
+below.  There are a few exceptions_, listed below.
 
-- docutils/optik.py, copyright Gregory P. Ward, released under a
+One goal of the Docutils project is to be included in the Python
+standard library distribution, at which time it is expected that
+copyright will be asserted by the `Python Software Foundation
+<http://www.python.org/psf/>`_.
+
+
+Public Domain Dedication
+========================
+
+The persons who have associated their work with this project (the
+"Dedicator": David Goodger and the many contributors to the Docutils
+project) hereby dedicate the entire copyright, less the exceptions_
+listed below, in the work of authorship known as "Docutils" identified
+below (the "Work") to the public domain.
+
+The primary repository for the Work is the Internet World Wide Web
+site <http://docutils.sourceforge.net/>.  The Work consists of the
+files within the "docutils" module of the Docutils project CVS
+repository (Internet host cvs.sourceforge.net, filesystem path
+/cvsroot/docutils), whose Internet web interface is located at
+<http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/docutils/docutils/>.
+Files dedicated to the public domain may be identified by the
+inclusion, near the beginning of each file, of a declaration of the
+form::
+
+    Copyright: This document/module/DTD/stylesheet/file/etc. has been
+               placed in the public domain.
+
+Dedicator makes this dedication for the benefit of the public at large
+and to the detriment of Dedicator's heirs and successors.  Dedicator
+intends this dedication to be an overt act of relinquishment in
+perpetuity of all present and future rights under copyright law,
+whether vested or contingent, in the Work.  Dedicator understands that
+such relinquishment of all rights includes the relinquishment of all
+rights to enforce (by lawsuit or otherwise) those copyrights in the
+Work.
+
+Dedicator recognizes that, once placed in the public domain, the Work
+may be freely reproduced, distributed, transmitted, used, modified,
+built upon, or otherwise exploited by anyone for any purpose,
+commercial or non-commercial, and in any way, including by methods
+that have not yet been invented or conceived.
+
+(This dedication is derived from the text of the `Creative Commons
+Public Domain Dedication
+<http://creativecommons.org/licenses/publicdomain>`_.)
+
+
+Exceptions
+==========
+
+The exceptions to the `Public Domain Dedication`_ above are:
+
+* docutils/optik.py, copyright by Gregory P. Ward, released under a
   BSD-style license (which can be found in the module's source code).
 
-- docutils/roman.py, copyright by Mark Pilgrim, released under the
+* docutils/roman.py, copyright by Mark Pilgrim, released under the
   `Python 2.1.1 license`_.
 
-- test/difflib.py, copyright by the Python Software Foundation,
+* test/difflib.py, copyright by the Python Software Foundation,
   released under the `Python 2.2 license`_.  This file is included for
   compatibility with Python versions less than 2.2; if you have Python
   2.2 or higher, difflib.py is not needed and may be removed.  (It's
   only used to report test failures anyhow; it isn't installed
   anywhere.  The included file is a pre-generator version of the
   difflib.py module included in Python 2.2.)
+
+* tools/pep2html.py, copyright by the Python Software Foundation,
+  released under the `Python 2.2 license`_.
+
+* tools/editors/emacs/rst-html.el, copyright by Martin Blais, released
+  under the `GNU General Public License`_.
+
+* tools/editors/emacs/rst-mode.el, copyright by Stefan Merten,
+  released under the `GNU General Public License`_.
 
 (Disclaimer: I am not a lawyer.)  Both the BSD license and the Python
 license are OSI-approved_ and GPL-compatible_.  Although complicated
@@ -34,5 +98,6 @@ use the owner's name in vain.  The BSD license is similar.
 
 .. _Python 2.1.1 license: http://www.python.org/2.1.1/license.html
 .. _Python 2.2 license: http://www.python.org/2.2/license.html
+.. _GNU General Public License: http://www.gnu.org/copyleft/gpl.html
 .. _OSI-approved: http://opensource.org/licenses/
 .. _GPL-compatible: http://www.gnu.org/philosophy/license-list.html
