@@ -5,6 +5,7 @@
 :Contact: goodger@users.sourceforge.net
 :Date: $Date$
 :Revision: $Revision$
+:Copyright: This document has been placed in the public domain.
 
 .. _Docutils: http://docutils.sourceforge.net/
 
